--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -1,7 +1,7 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- 项目结构\n",
@@ -13,7 +13,7 @@
     "            - training_data-102.npy\n",
     "    \n",
     "    - pysekiro\n",
-    "        - __init__.py\n",
+    "        - \\__init__.py\n",
     "\n",
     "        - keys.py (键盘按键的信息)\n",
     "        - get_keys.py (捕获键盘的按键)\n",
