--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -4,41 +4,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 项目结构\n",
-    "    - The_battle_memory\n",
-    "        - Genichiro_Ashina (内含1场演示用数据集和101场训练用的完整数据集，由于文件过大所以只上传演示用数据集)\n",
-    "            - training_data-1.npy (演示用数据集)\n",
-    "            - training_data-2.npy\n",
-    "            - ... (2 ~ 102 都是训练用的完整数据集)\n",
-    "            - training_data-102.npy\n",
-    "    \n",
-    "    - pysekiro\n",
-    "        - \\__init__.py\n",
+    "# 项目结构\n",
+    "- The_battle_memory\n",
+    "    - Genichiro_Ashina (内含1场演示用数据集和101场训练用的完整数据集，由于文件过大所以只上传演示用数据集)\n",
+    "        - training_data-1.npy (演示用数据集)\n",
+    "        - training_data-2.npy\n",
+    "        - ... (2 ~ 102 都是训练用的完整数据集)\n",
+    "        - training_data-102.npy\n",
     "\n",
-    "        - keys.py (键盘按键的信息)\n",
-    "        - get_keys.py (捕获键盘的按键)\n",
-    "        - direct_keys.py (控制键盘的按键)\n",
-    "        - actions.py (动作控制)\n",
+    "- pysekiro\n",
+    "    - \\__init__.py\n",
     "\n",
-    "        - grab_screen.py (屏幕图像抓取)\n",
-    "        - get_vertices.py (顶点位置获取)\n",
-    "        - get_status.py (状态获取)\n",
+    "    - keys.py (键盘按键的信息)\n",
+    "    - get_keys.py (捕获键盘的按键)\n",
+    "    - direct_keys.py (控制键盘的按键)\n",
+    "    - actions.py (动作控制)\n",
     "\n",
-    "        - collect_data.py (收集数据)\n",
-    "        \n",
-    "        - Agent.py (DQN)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
+    "    - grab_screen.py (屏幕图像抓取)\n",
+    "    - get_vertices.py (顶点位置获取)\n",
+    "    - get_status.py (状态获取)\n",
     "\n",
-    "import cv2\n",
-    "import numpy as np"
+    "    - collect_data.py (收集数据)\n",
+    "\n",
+    "    - Agent.py (DQN)"
    ]
   },
   {
@@ -49,7 +37,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- The_battle_memory\n",
@@ -59,10 +47,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(200, 2)\n"
+     ]
+    }
+   ],
    "source": [
+    "import os\n",
+    "\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "\n",
     "boss = 'Genichiro_Ashina' # 苇名弦一郎\n",
     "path = os.path.join('The_battle_memory', boss, f'training_data-{1}.npy')\n",
     "data = np.load(path, allow_pickle=True)\n",
@@ -78,9 +79,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "图像 [[ 93  91  91 ...  98  98 112]\n",
+      " [ 62  53  56 ...  76  83  81]\n",
+      " [ 72  57  55 ...  86  79  79]\n",
+      " ...\n",
+      " [139 160 169 ... 106 116 119]\n",
+      " [118 153 159 ... 101 115 123]\n",
+      " [118 144 149 ...  97  92 130]] (270, 480) uint8\n"
+     ]
+    }
+   ],
    "source": [
     "screen = data[0][0]    # 选取了第一个数据的图像部分\n",
     "print('图像', screen, screen.shape, screen.dtype)"
@@ -88,9 +103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "按键记录 [0, 0, 0, 0, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "action_value = data[0][1]    # 选取了第一个数据的按键记录部分\n",
     "print('按键记录', action_value)"
@@ -105,9 +128,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 剩余:    0, 动作:其他         "
+     ]
+    }
+   ],
    "source": [
     "Remaining = len(data)\n",
     "for screen, action_value in data:\n",
@@ -302,6 +333,7 @@
     "\n",
     "W = 0x11\n",
     "def Move_Forward():\n",
+    "    print('移动 前')\n",
     "    PressKey(W)\n",
     "    time.sleep(1)\n",
     "    ReleaseKey(W)\n",
@@ -359,9 +391,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "图像 [[ 24  24  57 ...  23  23  23]\n",
+      " [ 59  59  59 ...  59  59  59]\n",
+      " [ 59  59  59 ...  43  43  43]\n",
+      " ...\n",
+      " [238 238 238 ... 255 255 255]\n",
+      " [238 238 238 ... 255 255 255]\n",
+      " [238 238 238 ... 255 255 255]] (270, 480) uint8\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "from pysekiro.grab_screen import get_screen\n",
@@ -548,9 +594,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Press \"ESC\" to quit. \n",
+      "\n",
+      " x=68, x_w=499, y=677, y_h=696, vertices=[[68, 696], [68, 677], [499, 677], [499, 696]] \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "from pysekiro.get_vertices import get_vertices\n",
@@ -589,9 +646,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Remaining: 0     , Sekiro_HP:  117, Sekiro_Posture:   24, Boss_HP:  64, Boss_Posture:   58"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import cv2\n",
@@ -769,9 +834,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[57 59 52 56 56 54 58 50 51 57 52 56 58 54 48 55 54 55 50 58 55 53 53 60\n",
+      " 49 53 58 59 51 56 50 60 52 56 60 49 58 53 55 54 49 52 51 49 49 55 49 57\n",
+      " 56 58 49 49 56 52 56 47 56 49 53 57 53 54 53 52 47 57 53 54 55 88 51 44\n",
+      " 43 40 43 45 30 46 46 37 39 40 38 39 41 37 41 44 38 34 35 42 44 48 41 35\n",
+      " 30 33 41 37]\n",
+      "Boss_HP:   68\n",
+      "\n",
+      "\n",
+      "[57 59 52 56 56 54 58 50 51 57 52 56 58 54 48 55 54 55 50 58 55 53 53 60\n",
+      " 49 53 58 59 51 56 50 60 52 56 60 49 58 53 55 54 49 52 51 49 48 55 49 57\n",
+      " 56 58 49 49 56 52 56 47 56 49 53 57 53 54 53 52 47 57 53 54 55 88 51 44\n",
+      " 43 40 43 45 30 46 46 37 39 40 38 39 41 37 41 44 38 34 35 42 44 48 41 34\n",
+      " 30 34 41 37]\n",
+      "Boss_HP:   68\n",
+      "\n",
+      "\n",
+      "[ 57  59  52  56  56  54  58  50  51  57  52  56  58  54  48  55  54  55\n",
+      "  50  58  55  53  53  60  49  53  58  59  51  56  50  60  52  56  60  49\n",
+      "  58  53  55  54  49  52  51  49  48  55  49  57  56  58  49  49  56  52\n",
+      "  56  47  56  49  53  57  53  54  53  52  47  57  53  74 114 101  38  44\n",
+      "  43  40  43  45  30  46  46  37  39  40  38  38  41  37  41  44  38  34\n",
+      "  35  42  44  48  41  34  30  33  41  37]\n",
+      "Boss_HP:   66\n",
+      "\n",
+      "\n",
+      "[ 57  59  52  56  56  54  58  50  51  57  52  56  58  54  48  55  54  55\n",
+      "  50  58  55  53  53  60  49  53  58  59  51  56  50  60  52  56  60  49\n",
+      "  58  53  55  54  49  52  51  49  48  55  49  57  56  58  49  49  56  52\n",
+      "  56  47  56  49  53  57  53  54  53  52  47  57  53  74 114 101  38  44\n",
+      "  43  40  43  45  30  46  46  37  39  40  38  38  41  37  41  44  38  34\n",
+      "  35  42  44  48  41  34  30  33  41  37]\n",
+      "Boss_HP:   66\n",
+      "\n",
+      "\n",
+      "[ 57  59  52  56  56  54  58  50  51  57  52  56  58  54  48  55  54  55\n",
+      "  50  58  55  53  53  60  49  53  58  59  51  56  50  60  52  56  60  49\n",
+      "  58  53  55  54  49  52  51  49  48  55  49  57  56  58  49  49  56  52\n",
+      "  56  47  56  49  53  57  53  54  53  52  47  57  53  74 114 101  38  44\n",
+      "  43  40  43  45  30  46  46  37  39  40  38  38  41  37  41  44  38  34\n",
+      "  35  42  44  48  41  34  30  33  41  37]\n",
+      "Boss_HP:   66\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import numpy as np\n",
@@ -790,9 +905,9 @@
     "\n",
     "for screen in data[88:93,0]:\n",
     "\n",
-    "    Sekiro_HP = get_Boss_HP(screen)\n",
+    "    Boss_HP = get_Boss_HP(screen)\n",
     "\n",
-    "    print(f'Sekiro_HP: {Sekiro_HP:>4}', end='\\n\\n\\n')"
+    "    print(f'Boss_HP: {Boss_HP:>4}', end='\\n\\n\\n')"
    ]
   },
   {
@@ -822,6 +937,248 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### collect_data.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "整个代码的核心也就下面这些\n",
+    "~~~python\n",
+    "screen = get_screen()    # 屏幕图像获取\n",
+    "keys = key_check()       # 按键检测\n",
+    "output, action = keys_to_output(keys)     # 按键转化为对应的输出\n",
+    "training_data.append([screen, output])    # 把图像和按键打包在一个列表内，再添加进 training_data\n",
+    "np.save(save_path, training_data)    # 收集到一定程度就保存\n",
+    "~~~"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 主要代码"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "~~~python\n",
+    "def collect_data(boss):\n",
+    "    \n",
+    "    # 保存数据的容器\n",
+    "    training_data = []\n",
+    "    \n",
+    "    # 建立临时保存数据的文件夹\n",
+    "    path_1 = 'tmp_data'\n",
+    "    if path_1 not in os.listdir():\n",
+    "        os.mkdir(path_1)\n",
+    "    \n",
+    "    # 初始化保存路径\n",
+    "    starting_value = 1\n",
+    "    save_path = os.path.join(path_1, f'training_data-{starting_value}.npy')\n",
+    "    \n",
+    "    print('Ready!')\n",
+    "\n",
+    "    paused = True    # 初始状态是暂停，等准备好了按 T 就直接开始了\n",
+    "    while True:\n",
+    "        \n",
+    "        if not paused:\n",
+    "            last_time = time.time()\n",
+    "            \n",
+    "            screen = get_screen()    # 屏幕图像获取\n",
+    "            keys = key_check()    # 按键检测\n",
+    "            output, action = keys_to_output(keys)     # 按键转化为对应的输出\n",
+    "            \n",
+    "            # 数据整合（打包图像和按键输出）\n",
+    "            training_data.append([screen, output])\n",
+    "            \n",
+    "            # 临时保存数据\n",
+    "            if len(training_data) == 100:    # 每收集100个数据就保存到临时目录\n",
+    "                np.save(save_path, training_data)\n",
+    "                training_data = []    # 重置保存的容器\n",
+    "                starting_value += 1\n",
+    "                save_path = os.path.join(path_1, f'training_data-{starting_value}.npy')    # 更新保存的路径\n",
+    "            \n",
+    "            # 展示这一轮所耗时间，当前按下的键所代表的动作，当前被检测到的按键的列表\n",
+    "            battle_log = f'\\rloop took {round(time.time()-last_time, 3):>5} seconds. action {action:<11}. keys {str(keys):<60}'\n",
+    "            print(battle_log, end='')\n",
+    "        \n",
+    "        # 再次检测按键\n",
+    "        keys = key_check()\n",
+    "        if 'P' in keys:      # 按 ‘P’ 结束并保存\n",
+    "            np.save(save_path, training_data)\n",
+    "            break\n",
+    "        elif 'T' in keys:    # 按 ‘T’ 暂停或继续\n",
+    "            if paused:\n",
+    "                paused = False\n",
+    "                print('\\nStarting!')\n",
+    "                time.sleep(1)\n",
+    "            else:\n",
+    "                paused = True\n",
+    "                print('\\nPausing!')\n",
+    "                time.sleep(1)\n",
+    "    \n",
+    "    print('\\n\\nStop, please wait')\n",
+    "    \n",
+    "    merge_data(boss)    # 合并临时数据\n",
+    "\n",
+    "    print('Done!')\n",
+    "~~~"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 次要代码 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 代码比较简单，运行看一下结果就好了，注意，只有 get_keys.py 内定义了的才能检测得到\n",
+    "# 目前可以检测的是 ['W', 'S', 'A', 'D', 'J', 'K', 'SPACE', 'LSHIFT', 'T', 'P']\n",
+    "# 但是下面的程序只定义了 'J', 'K', 'LSHIFT', 'SPACE', 所以只会显示那些\n",
+    "from pysekiro.get_keys import key_check\n",
+    "\n",
+    "# 手动独热编码，以后方便控制\n",
+    "j  = [1,0,0,0,0] # 攻击 | Attack\n",
+    "k  = [0,1,0,0,0] # 弹反 | Deflect\n",
+    "ls = [0,0,1,0,0] # 垫步 | Step Dodge\n",
+    "sp = [0,0,0,1,0] # 跳跃 | Jump\n",
+    "ot = [0,0,0,0,1] # 其他 | Other\n",
+    "\n",
+    "def keys_to_output(keys):\n",
+    "\n",
+    "    if   'J' in keys:\n",
+    "        output = j\n",
+    "        action = 'Attack'     # 攻击\n",
+    "    elif 'K' in keys:\n",
+    "        output = k\n",
+    "        action = 'Deflect'    # 弹反\n",
+    "    elif 'LSHIFT' in keys:\n",
+    "        output = ls\n",
+    "        action = 'Step Dodge' # 垫步\n",
+    "    elif 'SPACE' in keys:\n",
+    "        output = sp\n",
+    "        action = 'Jump'       # 跳跃\n",
+    "    else:\n",
+    "        output = ot\n",
+    "        action = 'O'      # 其他\n",
+    "    return output, action\n",
+    "\n",
+    "while True:\n",
+    "    keys = key_check()\n",
+    "    output, action = keys_to_output(keys)\n",
+    "    print(f'\\r 输出：{str(output)}，动作：{action:<10}', end = '')\n",
+    "    \n",
+    "    if 'P' in keys:    # 停止条件：按下 P 键\n",
+    "        print('结束')\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 次要代码 2 （这部分完全可以不看，就是保存数据集而已）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "find_max_num() 和 merge_data() 是保存数据时用的代码  \n",
+    "临时数据都保存在 tmp_data 下，合并之后的数据保存在 The_battle_memory 相应的boss名称的文件夹内，文件名都是 training_data-**数字**.npy 的格式\n",
+    "用 find_max_num() 找到 tmp_data 内 .npy 文件的最大**数量**，作为遍历结束的条件（tmp_data 内的文件是按顺序的，所以最大数字也代表最大数量）  \n",
+    "用 find_max_num() 找到 The_battle_memory 相应的boss名称的文件夹内 .npy 文件的最大**数字**，取其下一位，能避免文件名重复的情况（数据命名原本是连续的，当偶尔会删掉中间几个质量很差的数据集，就造成了保存的时候文件名不连续的情况，这时候最大数值不能代表最大数量）  \n",
+    "- e.g.\n",
+    "    - training_data-3.npy, training_data-13.npy, training_data-101.npy\n",
+    "    - find_max_num()结果是 101"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "指定一个路径，找到 .npy 后缀的文件中最大的数字  \n",
+    "比如 tmp_data 文件夹下有 training_data-1.npy ~ training_data-22.npy ，那么输出就是 22\n",
+    "~~~python\n",
+    "def find_max_num(path):\n",
+    "    filenames = os.listdir(path)\n",
+    "    if 'training_data-1.npy' in filenames:\n",
+    "        max_num = max([int(x[14:-4]) for x in filenames if '.npy' in x])\n",
+    "    else:\n",
+    "        max_num = 0\n",
+    "    return max_num\n",
+    "~~~"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "~~~python\n",
+    "def merge_data(boss):\n",
+    "    path_1 = 'tmp_data'\n",
+    "    max_num_1 = find_max_num(path_1)    # 找到 tmp_data 文件夹下有 .npy 后缀的文件夹最大的数字\n",
+    "    if max_num_1 <= 1:    # 如果小于等于1 那说明数据太少，不被允许保存，删除文件后强制退出\n",
+    "        print('There is no data to merge.')\n",
+    "        shutil.rmtree(path_1)\n",
+    "        return -1\n",
+    "    \n",
+    "    npy_file = os.path.join(path_1, 'training_data-1.npy')\n",
+    "    data = np.load(npy_file, allow_pickle=True)    # 读取第一个数据集\n",
+    "    \n",
+    "    for i in range(2, max_num_1 + 1):    # 准备遍历剩下的数据集\n",
+    "        npy_file = os.path.join(path_1, f'training_data-{i}.npy')\n",
+    "        next_data = np.load(npy_file, allow_pickle=True)    # 读取下一个数据集\n",
+    "        \n",
+    "        data = np.append(data, next_data, axis=0)    # 把这个数据添加到 data 内，实现合并数据集\n",
+    "    \n",
+    "    path_2 = os.path.join('The_battle_memory', boss)\n",
+    "    max_num_2 = find_max_num(path_2)\n",
+    "    np.save(os.path.join(path_2, f'training_data-{max_num_2+1}.npy'), data)    # 保存到相应的位置\n",
+    "    \n",
+    "    shutil.rmtree(path_1)    # 数据已经合并完毕并转移，删除临时文件夹 tmp_data 以及里面的内容\n",
+    "~~~"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 实战"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "当提示 Ready! 时，第一次按 T 开始搜集数据，之后按 T 切换暂停和继续的状态，按 P 结束"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pysekiro.collect_data import collect_data\n",
+    "boss = 'Genichiro_Ashina' # 苇名弦一郎\n",
+    "collect_data(boss)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 待更新"
    ]
   }
@@ -844,7 +1201,8 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.5"
   },
-  "toc-autonumbering": true
+  "toc-autonumbering": true,
+  "toc-showtags": false
  },
  "nbformat": 4,
  "nbformat_minor": 4
