--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -168,7 +168,7 @@
     "    - **epochs** 每个数据集训练的次数\n",
     "        - 如果你搜集的数据足够多，并且是按照上面的要求做到，那完全可以设置成1\n",
     "        - 因为既然每个数据都是一场完整的战斗，那么真正的epochs其实是数据集的数量，除非你每场战斗是风格都不一样\n",
-    "    - **MODEL_WEIGHTS** 用以支持增量学习。默认为None。没有指定需要增量学习的模型的路径的话，就从零开始训练。\n",
+    "    - **model_weights** 用以支持增量学习。默认为None。没有指定需要增量学习的模型的路径的话，就从零开始训练。\n",
     "        - 当你搜集新的数据集之后想继续训练，可以把这个参数设置为要继续训练的模型的路径，这样就可以继续训练了\n",
     "        - 当你在训练过程中发生了某种意外终止了训练，可以把这个参数设置为True，然后把发生意外时正在训练的那个数据集的序号设置为start，就可以继续训练了\n",
     "- 如果想收集其他Boss的战斗数据，那就把target改成对应的Boss的名字（建议使用英文）"
@@ -188,15 +188,9 @@
     "    start=2,\n",
     "    end=102,\n",
     "    batch_size=8,\n",
-    "    epochs=1\n",
+    "    epochs=1,\n",
+    "    model_weights=None\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "深度学习训练出来的模型一般都很菜。。"
    ]
   },
   {
@@ -220,27 +214,71 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 待更新"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
    "source": [
     "## 用强化学习从零开始在实战中学习"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "由于游戏的难度比较大，所以强烈不推荐用这种方法"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from learn_online import learn_online\n",
+    "\n",
+    "learn_online(train=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## 用强化学习从已有的数据中学习，再在实战中继续学习"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 以下是用“苇名弦一郎”战斗数据来训练的示例\n",
+    "    - **target** 指定训练的对象\n",
+    "    - 注：必须 start < end\n",
+    "        - **start** 指定第一个训练的数据集\n",
+    "        - **end** 指定最后一个训练的数据集\n",
+    "    - **model_weights** 用以支持增量学习。默认为None。没有指定需要增量学习的模型的路径的话，就从零开始训练。\n",
+    "        - 当你搜集新的数据集之后想继续训练，可以把这个参数设置为要继续训练的模型的路径，这样就可以继续训练了\n",
+    "        - 当你在训练过程中发生了某种意外终止了训练，可以把这个参数设置为True，然后把发生意外时正在训练的那个数据集的序号设置为start，就可以继续训练了\n",
+    "- 如果想收集其他Boss的战斗数据，那就把target改成对应的Boss的名字（建议使用英文）"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from learn_offline import learn_offline\n",
+    "\n",
+    "target = 'Genichiro_Ashina' # 苇名弦一郎\n",
+    "learn_offline(target, start=2, end=102, model_weights=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from learn_online import learn_online\n",
+    "\n",
+    "learn_online(train=True, model_weights='tmp_weights.h5')"
    ]
   }
  ],
