--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -170,7 +170,7 @@
     "        - 因为既然每个数据都是一场完整的战斗，那么真正的epochs其实是数据集的数量，除非你每场战斗是风格都不一样\n",
     "    - **model_weights** 用以支持增量学习。默认为None。没有指定需要增量学习的模型的路径的话，就从零开始训练。\n",
     "        - 当你搜集新的数据集之后想继续训练，可以把这个参数设置为要继续训练的模型的路径，这样就可以继续训练了\n",
-    "        - 当你在训练过程中发生了某种意外终止了训练，可以把这个参数设置为True，然后把发生意外时正在训练的那个数据集的序号设置为start，就可以继续训练了\n",
+    "        - 当你在训练过程中发生了某种意外终止了训练，可以把这个参数设置为要继续训练的模型的路径，然后把发生意外时正在训练的那个数据集的序号设置为start，就可以继续训练了\n",
     "- 如果想收集其他Boss的战斗数据，那就把target改成对应的Boss的名字（建议使用英文）"
    ]
   },
@@ -208,7 +208,7 @@
    "source": [
     "from learn_online import learn_online as test\n",
     "\n",
-    "test()"
+    "test(model_weights='sekiro_weights.h5')"
    ]
   },
   {
@@ -247,6 +247,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 离线学习"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- 以下是用“苇名弦一郎”战斗数据来训练的示例\n",
     "    - **target** 指定训练的对象\n",
     "    - 注：必须 start < end\n",
@@ -254,7 +261,7 @@
     "        - **end** 指定最后一个训练的数据集\n",
     "    - **model_weights** 用以支持增量学习。默认为None。没有指定需要增量学习的模型的路径的话，就从零开始训练。\n",
     "        - 当你搜集新的数据集之后想继续训练，可以把这个参数设置为要继续训练的模型的路径，这样就可以继续训练了\n",
-    "        - 当你在训练过程中发生了某种意外终止了训练，可以把这个参数设置为True，然后把发生意外时正在训练的那个数据集的序号设置为start，就可以继续训练了\n",
+    "        - 当你在训练过程中发生了某种意外终止了训练，可以把这个参数设置为要继续训练的模型的路径，然后把发生意外时正在训练的那个数据集的序号设置为start，就可以继续训练了\n",
     "- 如果想收集其他Boss的战斗数据，那就把target改成对应的Boss的名字（建议使用英文）"
    ]
   },
@@ -271,6 +278,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 在线学习"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -278,7 +292,25 @@
    "source": [
     "from learn_online import learn_online\n",
     "\n",
-    "learn_online(train=True, model_weights='tmp_weights.h5')"
+    "learn_online(model_weights='tmp_weights.h5', train=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 测试模型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from learn_online import learn_online\n",
+    "\n",
+    "learn_online(model_weights='tmp_weights.h5')"
    ]
   }
  ],
