--- a/Quick_start.ipynb
+++ b/Quick_start.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 游戏设置"
+    "# 1 游戏设置"
    ]
   },
   {
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 校准游戏窗口位置"
+    "### 校准游戏窗口位置"
    ]
   },
   {
@@ -61,7 +61,7 @@
    "metadata": {},
    "source": [
     "- 将游戏窗口放在左上方  \n",
-    "![example_01](./imgs/example_01.png) "
+    "![example_01](https://github.com/ricagj/pysekiro_with_RL/blob/main/imgs/example_01.png)"
    ]
   },
   {
@@ -86,28 +86,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![adjustment](./imgs/adjustment.jpg) "
+    "- 当提示 Ready! 后\n",
+    "    - 按 T 开始\n",
+    "    - 按 P 结束"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 开始"
+    "![adjustment](https://github.com/ricagj/pysekiro_with_RL/blob/main/imgs/adjustment.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 用深度学习从已有的数据中学习"
+    "# 2 开始"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 收集数据"
+    "### 2.1 用深度学习从已有的数据中学习"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2.1.1 收集数据"
    ]
   },
   {
@@ -124,7 +133,7 @@
    "metadata": {},
    "source": [
     "- 以下是收集“苇名弦一郎”战斗数据的示例。\n",
-    "- 如果想收集其他Boss的战斗数据，那就把target改成对应的Boss的名字（建议使用英文）"
+    "- 如果想收集其他Boss的战斗数据，那就把target改成对应的Boss的名字"
    ]
   },
   {
@@ -135,6 +144,9 @@
    "source": [
     "from pysekiro.collect_data import Data_collection\n",
     "target = 'Genichiro_Ashina' # 苇名弦一郎\n",
+    "# target = 'Inner_Genichiro' # 心中的弦一郎\n",
+    "# target = 'Isshin,_the_Sword_Saint' # 剑圣一心\n",
+    "# target = 'Inner_Isshin' # 心中的一心\n",
     "c = Data_collection(target)\n",
     "c.collect_data()"
    ]
@@ -143,35 +155,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 当提示 Ready! 时，第一次按 T 开始搜集数据\n",
-    "- 之后按 T 切换暂停和继续的状态\n",
-    "- 按 P 结束"
+    "- 当提示 Ready! 后\n",
+    "    - 按 T 开始\n",
+    "    - 按 P 结束"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 训练模型"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- 以下是用“苇名弦一郎”战斗数据来训练的示例\n",
-    "    - **target** 指定训练的对象\n",
-    "    - 注：必须 start < end\n",
-    "        - **start** 指定第一个训练的数据集\n",
-    "        - **end** 指定最后一个训练的数据集\n",
-    "    - **batch_size** 训练时的批大小\n",
-    "    - **epochs** 每个数据集训练的次数\n",
-    "        - 如果你搜集的数据足够多，并且是按照上面的要求做到，那完全可以设置成1\n",
-    "        - 因为既然每个数据都是一场完整的战斗，那么真正的epochs其实是数据集的数量，除非你每场战斗是风格都不一样\n",
-    "    - **model_weights** 用以支持增量学习。默认为None。没有指定需要增量学习的模型的路径的话，就从零开始训练。\n",
-    "        - 当你搜集新的数据集之后想继续训练，可以把这个参数设置为要继续训练的模型的路径，这样就可以继续训练了\n",
-    "        - 当你在训练过程中发生了某种意外终止了训练，可以把这个参数设置为要继续训练的模型的路径，然后把发生意外时正在训练的那个数据集的序号设置为start，就可以继续训练了\n",
-    "- 如果想收集其他Boss的战斗数据，那就把target改成对应的Boss的名字（建议使用英文）"
+    "##### 2.1.2 训练模型"
    ]
   },
   {
@@ -183,21 +176,14 @@
     "from pysekiro.train_with_dl import train\n",
     "\n",
     "target = 'Genichiro_Ashina' # 苇名弦一郎\n",
-    "train(\n",
-    "    target = target,\n",
-    "    start=2,\n",
-    "    end=102,\n",
-    "    batch_size=8,\n",
-    "    epochs=1,\n",
-    "    model_weights=None\n",
-    ")"
+    "train(target)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 测试模型"
+    "##### 2.1.3 测试模型"
    ]
   },
   {
@@ -208,21 +194,37 @@
    "source": [
     "from learn_online import learn_online as test\n",
     "\n",
-    "test(model_weights='sekiro_weights.h5')"
+    "test(model_weights='dl_weights.h5')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 用强化学习从零开始在实战中学习"
+    "- 当提示 Ready! 后\n",
+    "    - 按 T 开始\n",
+    "    - 按 P 结束"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "由于游戏的难度比较大，所以强烈不推荐用这种方法"
+    "### 2.2 用强化学习从零开始在实战中学习"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 注：如果选择这种方式，可能学习过程会较长"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2.2.1 在线学习"
    ]
   },
   {
@@ -233,36 +235,57 @@
    "source": [
     "from learn_online import learn_online\n",
     "\n",
-    "learn_online(train=True)"
+    "learn_online(save_path='Online_w.h5', train=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 用强化学习从已有的数据中学习，再在实战中继续学习"
+    "- 当提示 Ready! 后\n",
+    "    - 按 T 开始\n",
+    "    - 按 P 结束"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 离线学习"
+    "##### 2.2.2 测试模型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from learn_online import learn_online\n",
+    "\n",
+    "learn_online(model_weights='Online_w.h5')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 以下是用“苇名弦一郎”战斗数据来训练的示例\n",
-    "    - **target** 指定训练的对象\n",
-    "    - 注：必须 start < end\n",
-    "        - **start** 指定第一个训练的数据集\n",
-    "        - **end** 指定最后一个训练的数据集\n",
-    "    - **model_weights** 用以支持增量学习。默认为None。没有指定需要增量学习的模型的路径的话，就从零开始训练。\n",
-    "        - 当你搜集新的数据集之后想继续训练，可以把这个参数设置为要继续训练的模型的路径，这样就可以继续训练了\n",
-    "        - 当你在训练过程中发生了某种意外终止了训练，可以把这个参数设置为要继续训练的模型的路径，然后把发生意外时正在训练的那个数据集的序号设置为start，就可以继续训练了\n",
-    "- 如果想收集其他Boss的战斗数据，那就把target改成对应的Boss的名字（建议使用英文）"
+    "- 当提示 Ready! 后\n",
+    "    - 按 T 开始\n",
+    "    - 按 P 结束"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3 用强化学习从已有的数据中学习，再在实战中继续学习"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2.3.1 离线学习"
    ]
   },
   {
@@ -274,14 +297,21 @@
     "from learn_offline import learn_offline\n",
     "\n",
     "target = 'Genichiro_Ashina' # 苇名弦一郎\n",
-    "learn_offline(target, start=2, end=102, model_weights=None)"
+    "learn_offline(target, start=1, end=2, save_path='offline_w.h5')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 在线学习"
+    "##### 2.3.2 在线学习"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 这一步会读取离线学习的模型"
    ]
   },
   {
@@ -292,14 +322,23 @@
    "source": [
     "from learn_online import learn_online\n",
     "\n",
-    "learn_online(model_weights='tmp_weights.h5', train=True)"
+    "learn_online(model_weights='offline_w.h5', save_path='online_w.h5', train=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 测试模型"
+    "- 当提示 Ready! 后\n",
+    "    - 按 T 开始\n",
+    "    - 按 P 结束"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2.3.3 测试模型"
    ]
   },
   {
@@ -310,7 +349,16 @@
    "source": [
     "from learn_online import learn_online\n",
     "\n",
-    "learn_online(model_weights='tmp_weights.h5')"
+    "learn_online(model_weights='online_w.h5')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 当提示 Ready! 后\n",
+    "    - 按 T 开始\n",
+    "    - 按 P 结束"
    ]
   }
  ],
@@ -332,7 +380,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.5"
   },
-  "toc-autonumbering": true,
+  "toc-autonumbering": false,
   "toc-showtags": false
  },
  "nbformat": 4,
