--- a/Quick_start.ipynb
+++ b/Quick_start.ipynb
@@ -14,7 +14,7 @@
     "- 打开游戏 《只狼：影逝二度》\n",
     "    - 设定\n",
     "        - 显示和声音\n",
-    "            - 亮度调整\n",
+    "            - **亮度调整**\n",
     "                - 设置 5\n",
     "        - 按键设置\n",
     "            - 移动\n",
@@ -34,14 +34,14 @@
     "                - 重置视角/固定目标\n",
     "                    - 设置 Y\n",
     "            - 攻击动作\n",
-    "                - 攻击\n",
+    "                - **攻击**\n",
     "                    - 设置 J\n",
-    "                - 防御\n",
+    "                - **防御**\n",
     "                    - 设置 K\n",
     "        - 图像设定\n",
-    "            - 屏幕模式\n",
+    "            - **屏幕模式**\n",
     "                - 窗口\n",
-    "            - 屏幕分辨率\n",
+    "            - **屏幕分辨率**\n",
     "                - 1280 x 720\n",
     "            - 自动绘图调整\n",
     "                - OFF\n",
@@ -235,7 +235,7 @@
    "source": [
     "from learn_online import learn_online\n",
     "\n",
-    "learn_online(save_path='Online_w.h5', train=True)"
+    "learn_online(save_path='Online_w.h5')"
    ]
   },
   {
@@ -322,7 +322,7 @@
    "source": [
     "from learn_online import learn_online\n",
     "\n",
-    "learn_online(model_weights='offline_w.h5', save_path='online_w.h5', train=True)"
+    "learn_online(model_weights='offline_w.h5', save_path='online_w.h5')"
    ]
   },
   {
