--- a/Quick_start.ipynb
+++ b/Quick_start.ipynb
@@ -61,7 +61,7 @@
    "metadata": {},
    "source": [
     "- 将游戏窗口放在左上方  \n",
-    "![example_01](https://github.com/ricagj/pysekiro_with_RL/blob/main/imgs/example_01.png)"
+    "![example_01](https://github.com/ricagj/pysekiro_with_RL/blob/main/imgs/example_01.png?raw=true?raw=true)"
    ]
   },
   {
@@ -95,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![adjustment](https://github.com/ricagj/pysekiro_with_RL/blob/main/imgs/adjustment.png)"
+    "![adjustment](https://github.com/ricagj/pysekiro_with_RL/blob/main/imgs/adjustment.png?raw=true)"
    ]
   },
   {
