--- a/How_is_it_trained.ipynb
+++ b/How_is_it_trained.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "source": [
     "对按键信息进行独热编码  \n",
-    "注意，这部分的定义非常重要，后面的很多设置都与它相适应"
+    "**注意，这部分的定义非常重要，后面有部分重要的代码需要根据这里的定义来编写**"
    ]
   },
   {
@@ -79,6 +79,9 @@
     "    self.target = target    # 目标\n",
     "    self.dataset = list()    # 保存数据的容器\n",
     "    self.save_path = os.path.join('The_battle_memory', self.target)    # 保存的位置\n",
+    "    if not os.path.exists(self.save_path):    # 确保保存的位置存在\n",
+    "        os.mkdir(self.save_path)\n",
+    "\n",
     "    self.reward_system = RewardSystem()    # 奖惩系统\n",
     "\n",
     "    self.step = 0    # 计步器\n",
@@ -170,11 +173,11 @@
     "~~~python\n",
     "screen = get_screen()    # 获取屏幕图像\n",
     "if not (np.sum(screen == 0) > 5000):    # 正常情况下不会有那么多值为0的像素点，除非黑屏了\n",
-    "    action = get_output(keys)    # 获取按键输出\n",
-    "    self.dataset.append([screen, action])    # 图像和输出打包在一起，保证一一对应\n",
+    "    action_onehot = get_output(keys)    # 获取按键输出\n",
+    "    action = np.argmax(action_onehot)\n",
+    "    self.dataset.append([screen, action_onehot])    # 图像和输出打包在一起，保证一一对应\n",
     "\n",
-    "    status = get_status(screen)\n",
-    "    reward = self.reward_system.get_reward(status)    # 计算 reward\n",
+    "    reward = self.reward_system.get_reward(get_status(screen, show=True))    # 计算 reward\n",
     "\n",
     "    # 降低数据采集的频率，两次采集的时间间隔为0.1秒\n",
     "    t = 0.1-(time.time()-last_time)\n",
@@ -225,6 +228,7 @@
     "target = 'Genichiro_Ashina' # 苇名弦一郎\n",
     "path = os.path.join('The_battle_memory', target, f'training_data-{1}.npy')\n",
     "data = np.load(path, allow_pickle=True)\n",
+    "\n",
     "print(f'当前数据集所包含数据量：{data.shape[0]}, 每个数据都有 {data.shape[1]} 个数据，分别是图像数据和按键数据')"
    ]
   },
@@ -283,21 +287,21 @@
     "    action = np.argmax(action_value)\n",
     "\n",
     "    if   action == 0:\n",
-    "        action = '攻击'\n",
+    "        a = '攻击'\n",
     "    elif action == 1:\n",
-    "        action = '弹反'\n",
+    "        a = '弹反'\n",
     "    elif action == 2:\n",
-    "        action = '垫步'\n",
+    "        a = '垫步'\n",
     "    elif action == 3:\n",
-    "        action = '跳跃'\n",
+    "        a = '跳跃'\n",
     "    elif action == 4:\n",
-    "        action = '其他'\n",
+    "        a = '其他'\n",
     "\n",
     "    cv2.imshow('screen', screen)\n",
     "    cv2.waitKey(30)\n",
     "\n",
     "    Remaining -= 1\n",
-    "    print(f'\\r 剩余: {Remaining:>4}, 动作:{action}, {action_value}', end='\\n') # end=''\n",
+    "    print(f'\\r 剩余: {Remaining:>4}, 动作:{a}, {action_value}', end='\\n') # end=''\n",
     "    if cv2.waitKey(1) & 0xFF == ord('q'):    # 按 q 键关闭视频\n",
     "        cv2.destroyAllWindows()\n",
     "        break\n",
@@ -316,7 +320,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "注意：我提供的模型不是最优的（瞎搞的），有能力的可以自己重写  \n",
+    "注意：我提供的模型不是最优的（*瞎搞的*），有能力的可以自己重写  \n",
     "要求：输入形状相关参数（width, height, frame_count），输出相关参数（outputs），需要编译（model.compile）"
    ]
   },
@@ -392,9 +396,14 @@
     "    data_path = os.path.join('The_battle_memory', target, filename)\n",
     "\n",
     "    if os.path.exists(data_path):    # 确保数据集存在\n",
+    "        \n",
+    "        # 加载数据集\n",
+    "        data = np.load(data_path, allow_pickle=True)\n",
+    "        \n",
     "        \"\"\"\n",
     "        训练部分，看下面\n",
     "        \"\"\"\n",
+    "        \n",
     "    else:\n",
     "        print(f'{filename} does not exist ')\n",
     "~~~"
@@ -406,9 +415,6 @@
    "source": [
     "**训练部分**\n",
     "~~~python\n",
-    "# 加载数据集\n",
-    "data = np.load(data_path, allow_pickle=True)\n",
-    "\n",
     "# 数据集处理成预训练格式\n",
     "X = np.array([roi(i[0], x, x_w, y, y_h) for i in data]).reshape(-1, ROI_WIDTH, ROI_HEIGHT, FRAME_COUNT)\n",
     "Y = np.array([i[1] for i in data])\n",
@@ -513,21 +519,17 @@
     "\n",
     "    # ---------- (S, A, R, S') ----------\n",
     "\n",
-    "    # 读取 状态S、动作A 和 新状态S'\n",
-    "    screen = data[step][0]           # 状态S\n",
-    "    action = data[step][1]           # 动作A\n",
-    "    next_screen = data[step+1][0]    # 新状态S'\n",
-    "\n",
-    "    # 获取 奖励R\n",
-    "    status = get_status(screen)\n",
-    "    reward = sekiro_agent.reward_system.get_reward(status)    # 奖励R\n",
+    "    screen = data[step][0]               # 状态S\n",
+    "    action = np.argmax(data[step][1])    # 动作A\n",
+    "    reward = sekiro_agent.reward_system.get_reward(get_status(screen))    # 奖励R\n",
+    "    next_screen = data[step+1][0]        # 新状态S'\n",
     "\n",
     "    # ---------- store ----------\n",
     "\n",
     "    # 集齐 (S, A, R, S')，开始存储\n",
     "    sekiro_agent.replayer.store(\n",
     "        roi(screen, x, x_w, y, y_h),\n",
-    "        np.argmax(action),\n",
+    "        action,\n",
     "        reward,\n",
     "        roi(next_screen, x, x_w, y, y_h)\n",
     "    )    # 存储经验\n",
@@ -564,20 +566,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "~~~python\n",
-    "def learn_online(model_weights=None, save_path=None):\n",
-    "    \n",
-    "    sekiro_agent = Sekiro_Agent(\n",
-    "        model_weights=model_weights,\n",
-    "        save_path = save_path\n",
-    "    )\n",
-    "~~~"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "- **model_weights** 指定模型权重的路径。\n",
     "- **save_path** 指定模型权重保存的路径。注：设置该参数的同时会开始训练模式"
    ]
@@ -587,10 +575,17 @@
    "metadata": {},
    "source": [
     "~~~python\n",
-    "if save_path:\n",
-    "    train = True\n",
-    "else:\n",
-    "    train = False\n",
+    "def learn_online(model_weights=None, save_path=None):\n",
+    "    \n",
+    "    sekiro_agent = Sekiro_Agent(\n",
+    "        model_weights=model_weights,\n",
+    "        save_path = save_path\n",
+    "    )\n",
+    "    \n",
+    "    if save_path:\n",
+    "        train = True\n",
+    "    else:\n",
+    "        train = False\n",
     "~~~"
    ]
   },
@@ -638,7 +633,7 @@
    "metadata": {},
    "source": [
     "**核心部分**  \n",
-    "- 按 'T' 之后，获得首个状态S，然后依次获得 动作A、奖励R 和 新状态S'，再进入下一个轮回  \n",
+    "- 按 'T' 之后，获得首个状态S，然后依次获得 动作A、奖励R 和 新状态S'，再进入第二个轮回  \n",
     "- 第二个轮回开始\n",
     "    1. 原本的 **新状态S'** 变成 **当前状态S**\n",
     "    2. 由 **当前状态S** 选取 **动作A**\n",
@@ -652,13 +647,8 @@
     "~~~python\n",
     "# ---------- (S, A, R, S') ----------\n",
     "\n",
-    "# 选取动作，同时执行动作\n",
     "action = sekiro_agent.choose_action(screen, train)    # 动作A\n",
-    "\n",
-    "# 获取 奖励R\n",
-    "status = get_status(screen)\n",
-    "reward = sekiro_agent.reward_system.get_reward(status)    # 奖励R\n",
-    "\n",
+    "reward = sekiro_agent.reward_system.get_reward(get_status(screen, show=True))    # 奖励R\n",
     "next_screen = get_screen()    # 新状态S'\n",
     "\n",
     "# ---------- 下一个轮回 ----------\n",
@@ -685,7 +675,7 @@
     "        # 集齐 (S, A, R, S')，开始存储\n",
     "        sekiro_agent.replayer.store(\n",
     "            roi(screen, x, x_w, y, y_h),\n",
-    "            np.argmax(action),\n",
+    "            action,\n",
     "            reward,\n",
     "            roi(next_screen, x, x_w, y, y_h)\n",
     "        )    # 存储经验\n",
@@ -732,11 +722,20 @@
    "source": [
     "计算 reward 的原理\n",
     "~~~python\n",
-    "# 每个状态的计算方法：(保留两位小数(现在的状态 - 过去的状态)) * 正负强化权重\n",
-    "s1 = round(self.status[0] - self.past_status[0], 2) *  1    # 自身生命，与reward呈正相关\n",
-    "s2 = round(self.status[1] - self.past_status[1], 2) * -1    # 自身架势，与reward呈负相关\n",
-    "t1 = round(self.status[2] - self.past_status[2], 2) * -1    # 目标生命，与reward呈负相关\n",
-    "t2 = round(self.status[3] - self.past_status[3], 2) *  1    # 目标架势，与reward呈正相关\n",
+    "# 约束状态值的上下限，防止波动过大影响训练，也防止异常值和特殊值的影响。\n",
+    "def limit(value, lm=10):\n",
+    "    if value > lm:\n",
+    "        return lm\n",
+    "    elif value < -lm:\n",
+    "        return -lm\n",
+    "    else:\n",
+    "        return value\n",
+    "\n",
+    "# 每个状态的计算方法：(现在的状态 - 过去的状态) * 正负强化权重，然后约束上下限\n",
+    "s1 = limit((self.status[0] - self.past_status[0]) *  1, 30)    # 自身生命\n",
+    "s2 = limit((self.status[1] - self.past_status[1]) * -1, 10)    # 自身架势\n",
+    "t1 = limit((self.status[2] - self.past_status[2]) * -1, 20)    # 目标生命\n",
+    "t2 = limit((self.status[3] - self.past_status[3]) *  1, 10)    # 目标架势\n",
     "\n",
     "reward = 0.2 * (s1 + t1) + 0.8 * (s2 + t2)\n",
     "~~~"
@@ -838,18 +837,18 @@
     "    # train = True 开启探索模式\n",
     "    if r < self.epsilon:\n",
     "        self.epsilon *= self.epsilon_decrease_rate    # 逐渐减小探索参数, 降低行为的随机性\n",
-    "        q_values = np.random.randint(self.n_action)\n",
+    "        action = np.random.randint(self.n_action)\n",
     "\n",
     "    # train = False 直接进入这里\n",
     "    else:\n",
     "        screen = roi(screen, x, x_w, y, y_h)\n",
     "        q_values = self.evaluate_net.predict([screen.reshape(-1, ROI_WIDTH, ROI_HEIGHT, FRAME_COUNT)])[0]\n",
-    "        q_values = np.argmax(q_values)\n",
+    "        action = np.argmax(q_values)\n",
     "\n",
     "    # 执行动作\n",
-    "    act(q_values)\n",
+    "    act(action)\n",
     "\n",
-    "    return q_values\n",
+    "    return action\n",
     "~~~"
    ]
   },
@@ -879,17 +878,6 @@
     "\n",
     "        self.evaluate_net.fit(screens, q_target, verbose=0)\n",
     "~~~"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "e.g. 假设 gamma = 0.99, batch_size = 1, actions = \\[4\\], rewards = \\[0.1\\]  \n",
-    "假设用目标网络预测得到Q估计 q_next = \\[-10.208012, -9.689987, -19.462318, -32.95078, -19.0380535\\]  \n",
-    "再假设用评估网络预测得到Q现实 q_target = \\[-5.4369993, -0.6329853, -7.0615597, -1.2227081, 5.5743136\\]  \n",
-    "那么 q_target\\[0, 4\\] = 0.1 + 0.99 * -9.689987    # 计算结果为 -9.4930871  \n",
-    "即 q_target = \\[-5.4369993, -0.6329853, -7.0615597, -1.2227081, -9.4930871\\]"
    ]
   },
   {
