--- a/How_it_works.ipynb
+++ b/How_it_works.ipynb
@@ -265,17 +265,17 @@
    "source": [
     "~~~python\n",
     "# 根据 collect_data.py 中的 get_output()\n",
-    "def act(values):\n",
+    "def act(action):\n",
     "    \n",
-    "    if   values == 0:\n",
+    "    if   action == 0:\n",
     "        act = Attack     # 攻击\n",
-    "    elif values == 1:\n",
+    "    elif action == 1:\n",
     "        act = Deflect    # 弹反\n",
-    "    elif values == 2:\n",
+    "    elif action == 2:\n",
     "        act = Step_Dodge # 垫步\n",
-    "    elif values == 3:\n",
+    "    elif action == 3:\n",
     "        act = Jump       # 跳跃\n",
-    "    elif values == 4:\n",
+    "    elif action == 4:\n",
     "        act = Move_Forward # 其他（暂时用 移动 前 替代）\n",
     "\n",
     "    act_process = threading.Thread(target=act)\n",
@@ -454,9 +454,9 @@
    "source": [
     "要获取的状态有：自身生命，自身架势，目标生命，目标架势。  \n",
     "- 获取方法\n",
-    "    - 靠 [get_vertices.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/pysekiro/get_vertices.py) 把状态抠出来。\n",
-    "    - 用图像阈值处理（cv2.threshold）处理范围外的像素点（比如获取生命值状态，红色的部分是生命值，非红色的部分不是，那非红色的部分就是范围外），将其设为0\n",
-    "    - 通过计数法转化为数值"
+    "    1. 靠 [get_vertices.py](https://github.com/ricagj/pysekiro_with_RL/blob/main/pysekiro/get_vertices.py) 把状态抠出来。\n",
+    "    2. 用图像阈值处理（cv2.threshold）处理范围外的像素点（比如获取生命值状态，红色的部分是生命值，非红色的部分不是，那非红色的部分就是范围外），将其设为0\n",
+    "    3. 通过计数法转化为数值"
    ]
   },
   {
@@ -470,8 +470,8 @@
     "# 获取自身生命\n",
     "def get_Self_HP(img):\n",
     "    img_roi = roi(img, x=29, x_w=182, y=246, y_h=246+1)[0]    # 获取自 get_vertices.py\n",
-    "    retval, img_th = cv2.threshold(img_roi, 60, 255, cv2.THRESH_TOZERO)    # 低于60的像素点的值设置为0\n",
-    "    retval, img_th = cv2.threshold(img_th, 80, 255, cv2.cv2.THRESH_TOZERO_INV)    # 高于80的像素点的值设置为0\n",
+    "    retval, img_th = cv2.threshold(img_roi, 60, 255, cv2.THRESH_TOZERO)           # 图像阈值处理，像素点的值低于60的设置为0\n",
+    "    retval, img_th = cv2.threshold(img_th, 80, 255, cv2.cv2.THRESH_TOZERO_INV)    # 图像阈值处理，像素点的值高于80的设置为0\n",
     "    img_th = np.reshape(img_th, (img_roi.shape))\n",
     "    Self_HP = get_value(img_th)    # 获取数值\n",
     "    return Self_HP\n",
@@ -496,21 +496,28 @@
     "    img_roi = roi(img, x=240, x_w=290, y=234, y_h=234+1)[0]    # 获取自 get_vertices.py\n",
     "    retval, img_th = cv2.threshold(img_roi, 100, 255, cv2.THRESH_TOZERO)    # 低于100的像素点的值设置为0\n",
     "    img_th = np.reshape(img_th, (img_roi.shape))\n",
-    "    if int(img_th[0]) - int(img_th[1]) > 15:    # 开启条件\n",
-    "        if img_th[1] in range(100, 125) and img_th[0] in range(145, 165):\n",
-    "            Self_Posture = get_value(img_th)\n",
-    "        elif img_th[1] in range(135, 160) and img_th[0] in range(180, 220):\n",
-    "            Self_Posture = get_value(img_th)\n",
-    "        elif img_th[1] in range(160, 230) and img_th[0] in range(200, 250):\n",
-    "            Self_Posture = get_value(img_th)\n",
-    "        else:\n",
-    "            Self_Posture = 0\n",
+    "    \"\"\"\n",
+    "    开启条件，看下面\n",
+    "    \"\"\"\n",
+    "    return Self_Posture\n",
+    "~~~\n",
+    "~~~python\n",
+    "# 获取自身架势的开启条件\n",
+    "if int(img_th[0]) - int(img_th[1]) > 15:\n",
+    "    if img_th[1] in range(100, 125) and img_th[0] in range(145, 165):\n",
+    "        Self_Posture = get_value(img_th)\n",
+    "    elif img_th[1] in range(135, 160) and img_th[0] in range(180, 220):\n",
+    "        Self_Posture = get_value(img_th)\n",
+    "    elif img_th[1] in range(160, 230) and img_th[0] in range(200, 250):\n",
+    "        Self_Posture = get_value(img_th)\n",
     "    else:\n",
     "        Self_Posture = 0\n",
-    "    return Self_Posture\n",
-    "\n",
+    "else:\n",
+    "    Self_Posture = 0\n",
+    "~~~\n",
+    "~~~python\n",
     "# 获取目标架势\n",
-    "# 代码和获取自身架势类似，这里就不贴出来了\n",
+    "# 代码和获取自身架势类似，这里就不贴出来了  \n",
     "~~~"
    ]
   },
@@ -518,8 +525,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "获取数值  \n",
-    "范围外的像素点已经通过图像阈值处理处理成0了，所以计算第一个出现的0的左边有多少个非0值，得到的结果就是我们需要的那个状态值\n",
+    "- 获取数值\n",
+    "    - 我们所看到的那条生命值还有架势，是有一定宽度的，读取了图像数据之后就是一个有多行数据的数组，但我们在计算的时候不需要那么多行，每行的数据其实都是差不多的，所以选取其中一行数据就可以了\n",
+    "    - 这个参数 **target_img** 就是这其中的一行数据，也就是所谓的一维数组。\n",
+    "    - 在输入这里的时候， **target_img** 已经做过图像阈值处理，就是范围外的像素点处理成0，所以计算从左数第一个出现的0的左边有多少个非0值，得到的结果就是我们需要的那个状态值\n",
+    "        - e.g. \\[113, 113, 113, 115, 116, 110, 0, 0, 231, 0\\] 计算结果为 6\n",
+    "        - e.g. \\[0, 113, 123, 123, 105, 0, 0, 142, 115, 111\\] 计算结果为 0\n",
+    "        - e.g. \\[113, 0, 123, 123, 105, 0, 0, 142, 115, 111\\] 计算结果为 1\n",
+    "\n",
     "~~~python\n",
     "def get_value(target_img):\n",
     "    count = 0\n",
