--- a/Quick_start.ipynb
+++ b/Quick_start.ipynb
@@ -61,7 +61,7 @@
    "metadata": {},
    "source": [
     "- 将游戏窗口放在左上方  \n",
-    "![example_01](https://github.com/ricagj/pysekiro_with_RL/blob/main/imgs/example_01.png?raw=true?raw=true)"
+    "![example_01.png](https://github.com/ricagj/pysekiro_with_RL/blob/main/imgs/example_01.png?raw=true?raw=true)"
    ]
   },
   {
@@ -95,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![adjustment](https://github.com/ricagj/pysekiro_with_RL/blob/main/imgs/adjustment.png?raw=true)"
+    "![adjustment.png](https://github.com/ricagj/pysekiro_with_RL/blob/main/imgs/adjustment.png?raw=true)"
    ]
   },
   {
@@ -297,7 +297,7 @@
     "from learn_offline import learn_offline\n",
     "\n",
     "target = 'Genichiro_Ashina' # 苇名弦一郎\n",
-    "learn_offline(target, start=1, end=2, save_path='offline_w.h5')"
+    "learn_offline(target, save_path='offline_w.h5')"
    ]
   },
   {
@@ -311,7 +311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 这一步会读取离线学习的模型"
+    "这里与前面的从零开始在线学习的区别是，读取了离线学习的模型权重"
    ]
   },
   {
